add nested shortcodes for navigation and emojis to buttons

--- a/layouts/shortcodes/navigation-education-button.html
+++ b/layouts/shortcodes/navigation-education-button.html
@@ -4,5 +4,5 @@
   onclick="dataLayer.push({'event': 'navigation-button-click', 'navigation_button_name': 'education'}); console.log('navigation button clicked');" 
   href="/education/"
 >
-  Education
+  🎓 Education
 </a>
