--- a/layouts/shortcodes/navigation-workexperience-button.html
+++ b/layouts/shortcodes/navigation-workexperience-button.html
@@ -4,5 +4,5 @@
   onclick="dataLayer.push({'event': 'navigation-button-click', 'navigation_button_name': 'work-experience'}); console.log('navigation button clicked');" 
   href="/work-experience/"
 >
-  Work Experience
+  👔 Work Experience
 </a>
