--- a/assets/scss/components/_code.scss
+++ b/assets/scss/components/_code.scss
@@ -17,9 +17,10 @@ pre {
 }
 
 code {
-  background: $gray-200;
+  background: $gray-300;
   color: $gray-900;
   padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
 }
 
 pre code {
