add margin to buttons. reduce nav-brand font size on mobile

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -15,6 +15,9 @@
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
+  .navbar-brand {
+    font-size: $font-size-md;
+  }
 }
 
 @include media-breakpoint-up(md) {
