--- a/layouts/shortcodes/navigation-home-button.html
+++ b/layouts/shortcodes/navigation-home-button.html
@@ -1,5 +1,5 @@
 <a 
-  class="btn btn-outline-dark px-3 py-2" 
+  class="btn btn-outline-dark px-3 py-2 mt-1" 
   role="button" 
   onclick="dataLayer.push({'event': 'navigation-button-click', 'navigation_button_name': 'home'}); console.log('navigation button clicked');" 
   href="/"
