--- a/layouts/shortcodes/request-resume-button.html
+++ b/layouts/shortcodes/request-resume-button.html
@@ -1,5 +1,5 @@
 <a 
-  class="btn btn-outline-dark px-3 py-2" 
+  class="btn btn-outline-dark px-3 py-2 mt-1" 
   role="button" 
   href="https://api.whatsapp.com/send?phone=60173983998&text=Hi Henrik 👋 %0a%0aMy name is [your name here]%0a%0aI’d like to request a copy of your resume because [your reason here]%0a%0aThanks in advance 🙏" 
   onclick="dataLayer.push({'event': 'request-resume-click'}); console.log('request-resume-click fired');" 
