--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 {{ $image := resources.Get "images/henrik_profile_beard-modified_small.png" }}
-{{ $image := $image.Resize "x180 webp" }}
+{{ $image := $image.Resize "x360 webp" }}
 <div class="row justify-content-center">
   <div class="col-lg-10 pb-2 text-center">  
-    <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="Henrik in a Suit and Beard Profile Picture" >
+    <img src="{{ $image.RelPermalink }}" width="180" height="180" alt="Henrik in a Suit and Beard Profile Picture" >
     <h1>{{ .Title }}</h1>
     <p>{{ .Params.Lead | safeHTML }}</p>
   </div>
