--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,6 +13,7 @@
 @import "components/alerts";
 @import "components/buttons";
 @import "components/code";
+@import "components/tables";
 
 // @import "components/syntax";
 @import "components/comments";
