--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -10,4 +10,5 @@
   {{ block "head/favicons" . }}{{ partial "head/favicons.html" . }}{{ end }}
   {{ block "head/script-header" . }}{{ partial "head/script-header.html" . }}{{ end }}
   <meta name="google-site-verification" content="TVUdAh0RA_yjsXKKjybCDe7JsKnXBhYFbcRPoJy03rc" />
+  <meta name="ahrefs-site-verification" content="bc08e3a49be838e1d8cfa2eabc5bf8e7d833c572e09db62742db9ed9917d6ada">
 </head>
