rewrite datalayer and snippets

--- a/layouts/partials/gtm-datalayer.html
+++ b/layouts/partials/gtm-datalayer.html
@@ -2,23 +2,28 @@
   <script>
 	window.dataLayer = window.dataLayer || [];
 	window.dataLayer.push({
-		{{- if .ExpiryDate}}'pageExpiryDate': '{{ .ExpiryDate.format  "2006-01-02"  }}',{{- end }}
-		'pagePublishDate': '{{ .PublishDate.Format "2006-01-02" }}',
-		'pageModifiedDate': '{{ .Lastmod.Format "2006-01-02"  }}',
-		{{- if eq .Kind "page" }}'pageReadingTimeMinutes': {{ .ReadingTime }},
-		'pageReadingTimeSeconds': {{- $readTime := mul (div (countwords .Content) 220.0) 60 }}{{- math.Round $readTime}},
-		'pageWordCount': {{- .WordCount }},
-		'pageFuzzyWordCount': {{- .FuzzyWordCount }},{{- else }}{{- end }}
-		'pageKind': '{{ .Kind }}',
-		'pageId': '{{ with .File }}{{ .UniqueID }}{{ end }}',
-		'pageTitle': '{{ .LinkTitle }}',
-		'pagePermalink': '{{ .Permalink }}',
-		'pageType': '{{ .Type }}',
-		'pageTranslated': {{ .IsTranslated }},
-		{{- if .Params.author -}} 'pageAuthor': '{{ if .Params.author -}}{{ .Params.author }}{{- else if .Site.Author.name -}}{{ .Site.Author.name }}{{- end }}',{{- end }}	
-		{{- if .Params.categories}}{{$category := index (.Params.categories) 0}}'pageCategory':'{{ $category }}', {{- end }}
-		{{- if .Params.tags}}'pageTags':'{{ delimit .Params.tags "|" }}', {{- end }}
-		{{- if .IsHome }}'pageType2': 'home',{{- else if eq .Kind "taxonomy" }}'pageType2': 'tag',{{- else if eq .Type "page" }}'pageType2': 'page',{{- else }}'pageType2': 'post',{{- end }}
-		'pageLanguage': '{{ .Language }}'
-	 });
+		'hugo_environment': '{{ hugo.Environment }}',
+		'page': {
+			{{- if .Params.author -}} 'author': '{{ if .Params.author -}}{{ .Params.author }}{{- else if .Site.Author.name -}}{{ .Site.Author.name }}{{- end }}',{{- end }}	
+			{{- if .Params.categories}}{{$category := index (.Params.categories) 0}}'category':'{{ $category }}',{{- end }}
+			{{- if .ExpiryDate}}'expiry_date': '{{ .ExpiryDate.format  "2006-01-02"  }}',{{- end }}
+			'id': '{{ with .File }}{{ .UniqueID }}{{ end }}',
+			'kind': '{{ .Kind }}',
+			'language': '{{ .Language }}',
+			{{- if eq .Kind "page" }}'metrics': {
+				'reading_time_minutes': {{ .ReadingTime }},
+				'reading_time_seconds': {{- $readTime := mul (div (countwords .Content) 220.0) 60 }}{{- math.Round $readTime}},
+				'wordcount': {{- .WordCount }},
+				'fuzzy_wordcount': {{- .FuzzyWordCount }}
+			},{{- else }}{{- end }}
+			'modified_date': '{{ .Lastmod.Format "2006-01-02"  }}',
+			'permalink': '{{ .Permalink }}',
+			'publish_date': '{{ .PublishDate.Format "2006-01-02" }}',
+			{{- if .Params.tags}}'tags':'{{ delimit .Params.tags "|" }}',{{- end }}
+			'title': '{{ .LinkTitle }}',
+			'translated': {{ .IsTranslated }},
+			'type': '{{ .Type }}',
+			'type2': {{- if .IsHome }}'home'{{- else if eq .Kind "taxonomy" }}'tag'{{- else if eq .Type "page" }}'page'{{- else }}'post'{{- end }}
+		}
+	});
   </script>
