--- a/layouts/partials/gtm-js-snippet.html
+++ b/layouts/partials/gtm-js-snippet.html
@@ -1,13 +1,9 @@
-<!-- Kindly borrowed from https://github.com/martijnvv/GTM-integration-Hugo/blob/master/gtm.html -->
-{{ if .Site.Params.gtm_id}}{{ if .Site.Params.gtm_endpoint}}  
-  <link href='https://{{ .Site.Params.gtm_endpoint }}' rel="preconnect" crossorigin>
-  <link rel="dns-prefetch" href='https://{{ .Site.Params.gtm_endpoint }}'>
-  {{ else }}
-  <link href='https://www.googletagmanager.com' rel="preconnect" crossorigin>
-  <link rel="dns-prefetch" href='https://www.googletagmanager.com'>{{ end }}
+  {{/* Kindly borrowed from https://github.com/martijnvv/GTM-integration-Hugo/blob/master/gtm.html */}}
+  <link rel="preconnect" href="https://{{ if .Site.Params.gtm_endpoint }}{{ .Site.Params.gtm_endpoint }}{{ else }}www.googletagmanager.com{{ end }}/" crossorigin>
+  <link rel="dns-prefetch" href="https://{{ if .Site.Params.gtm_endpoint }}{{ .Site.Params.gtm_endpoint }}{{ else }}www.googletagmanager.com{{ end }}/">
 
-{{ if .Site.Params.gtm_id}}<script type="text/javascript">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  <script type="text/javascript">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://{{ if .Site.Params.gtm_endpoint }}{{ .Site.Params.gtm_endpoint }}{{ else }}www.googletagmanager.com{{ end }}/{{ if .Site.Params.use_custom_library_name }}{{ .Site.Params.gtm_library_name }}{{ else }}gtm.js{{ end }}?{{ if .Site.Params.override_container_id }}{{ else }}id='+i+dl+'{{ end }}{{ if not hugo.IsProduction }}&gtm_auth={{ .Site.Params.gtm_env_param_gtm_auth }}&gtm_preview={{ .Site.Params.gtm_env_param_gtm_preview }}&gtm_cookies_win=x{{ end }}';f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','{{ .Site.Params.gtm_id }}');</script>{{ end }}{{ end }}
+	'https://{{ if .Site.Params.gtm_endpoint }}{{ .Site.Params.gtm_endpoint }}{{ else }}www.googletagmanager.com{{ end }}/{{ if .Site.Params.use_custom_library_name }}{{ .Site.Params.gtm_library_name }}{{ else }}gtm.js{{ end }}?{{ if .Site.Params.override_container_id }}{{ else }}id='+i+dl+'{{ end }}{{ if and (not hugo.IsProduction) (.Site.Params.gtm_env_enable) }}&gtm_auth={{ .Site.Params.gtm_env_param_gtm_auth }}&gtm_preview={{ .Site.Params.gtm_env_param_gtm_preview }}&gtm_cookies_win=x{{ end }}';f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','{{ .Site.Params.gtm_id }}');</script>
