--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -2,8 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {{ if .Site.Params.gtm_datalayer }}{{ partial "gtm-datalayer.html" . }}{{ end }}
-  {{ if .Site.Params.gtm_id}}{{ partial "gtm-js-snippet.html" . }}{{ end }}
+  {{- if and (.Site.Params.disable_gtm_in_development) ( not hugo.IsProduction) -}}
+  {{- else -}}
+  {{- if .Site.Params.gtm_datalayer }}{{ partial "gtm-datalayer.html" . -}}{{ end }}
+  {{- if .Site.Params.gtm_id}}{{ partial "gtm-js-snippet.html" . -}}{{ end }}
+  {{- end -}}
   {{ block "head/resource-hints" . }}{{ partial "head/resource-hints.html" . }}{{ end }}
   {{ block "head/stylesheet" . }}{{ partial "head/stylesheet.html" . }}{{ end }}
   {{ block "head/seo" . }}{{ partial "head/seo.html" . }}{{ end }}
