--- a/layouts/partials/head/seo.html
+++ b/layouts/partials/head/seo.html
@@ -2,11 +2,11 @@
   <meta name="robots" content="noindex, follow">
 {{ else -}}
   {{ with .Params.robots -}}
-    <meta name="robots" content="{{ . }}">
+  <meta name="robots" content="{{ . }}">
   {{ else -}}
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   {{ end -}}
 {{ end -}}
 
@@ -16,28 +16,28 @@
   <title>{{ .Title }} {{ .Site.Params.titleSeparator }} {{ .Site.Params.title }}</title>
 {{ end -}}
 
-{{ with .Description -}}
+{{ with .Description }}
   <meta name="description" content="{{ . }}">
-{{ else -}}
+{{ else }}
   <meta name="description" content="{{ .Site.Params.description }}">
 {{ end -}}
 
-{{ if $.Scratch.Get "paginator" }}
+  {{ if $.Scratch.Get "paginator" }}
   <link rel="canonical" href="{{ .Paginator.URL | absURL }}">
-  {{ if .Paginator.HasPrev -}}
-    <link rel="prev" href="{{ .Paginator.Prev.URL | absURL }}">
+  {{ if .Paginator.HasPrev }}
+  <link rel="prev" href="{{ .Paginator.Prev.URL | absURL }}">
   {{ end -}}
-  {{ if .Paginator.HasNext -}}
-    <link rel="next" href="{{ .Paginator.Next.URL | absURL }}">
-  {{ end -}}
-{{ else  -}}
+  {{ if .Paginator.HasNext }}
+  <link rel="next" href="{{ .Paginator.Next.URL | absURL }}">
+  {{ end }}
+  {{ else  }}
   <link rel="canonical" href="{{ .Permalink }}">
-{{ end -}}
+  {{ end -}}
 
 {{ partial "head/opengraph.html" . }}
 {{ partial "head/twitter_cards.html" . }}
 
-{{ range .AlternativeOutputFormats -}}
+{{ range .AlternativeOutputFormats }}
   <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
 {{ end -}}
 
