--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
   <body class="{{ delimit (.Scratch.Get "class") " " }}">
     {{- if and (.Site.Params.enable_gtm_only_in_production) (hugo.IsProduction) -}}
       {{- if not .Site.IsServer}}{{ if .Site.Params.gtm_id}}{{ partial "gtm-noscript-snippet.html" . -}}{{ end }}{{ end }}
+      {{ partial "fouanalytics-noscript-snippet.html" . -}}
     {{- end -}}
     {{ partial "header/header.html" . }}
     <div class="wrap container" role="document">
